--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -201,7 +201,7 @@
     <string name="text_date">Date</string>
     <string name="text_place">Place</string>
     <string name="text_time">Time</string>
-    <string name="text_choice">Select</string>
+    <string name="text_choice">SELECT</string>
     <string name="text_choice_date">Select date</string>
     <string name="text_input_date">Please select a date.</string>
     <string name="text_next">Next</string>
