--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -200,6 +200,7 @@
     <string name="text_place">場所</string>
     <string name="text_time">時間</string>
     <string name="text_choice">選択する</string>
+    <string name="text_copy">コピーする</string>
     <string name="text_choice_date">日付を選択</string>
     <string name="text_input_date">日付を選択してください。</string>
     <string name="text_next">次の</string>
@@ -249,6 +250,7 @@
     <string name="text_notify_used">通知使用</string>
     <string name="text_vibrate_used">バイブレーション</string>
     <string name="text_sound_used">サウンド</string>
+    <string name="text_select_bg">背景の選択</string>
 
     <string name="push_content_diary">新しい[日記]が登録されました。</string>
     <string name="push_content_plan">新しい[日程]が登録されました。</string>
@@ -258,4 +260,5 @@
     <string name="toast_insight_year">全体日記の中で、%1$d年に作成した日記の割合です。</string>
     <string name="toast_insight_month">%1$d年の日記の中で、%2$d月に作成した日記の割合です。</string>
     <string name="toast_insight_week">%1$d月の日記の中で、今週に作成した日記の割合です。</string>
+    <string name="toast_copy_completed">コピーされました。</string>
 </resources>
