--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -251,6 +251,14 @@
     <string name="text_vibrate_used">バイブレーション</string>
     <string name="text_sound_used">サウンド</string>
     <string name="text_select_bg">背景の選択</string>
+    <string name="text_guide_diary_title">思い出を記録します。</string>
+    <string name="text_guide_plan_title">記念日を共有します。</string>
+    <string name="text_guide_day_title">特別な日を忘れないでください。</string>
+    <string name="text_guide_welcome_title">WITHにようこそ。</string>
+    <string name="text_guide_diary_des">カップル日記を作成し、お互いの愛を確認してください。</string>
+    <string name="text_guide_plan_des">重要な約束や記念日を登録して最愛の人と共有できます。</string>
+    <string name="text_guide_day_des">大切な思い出を忘れずに記念下さい。</string>
+    <string name="text_guide_welcome_des">幸せな一日を過ごす！</string>
 
     <string name="push_content_diary">新しい[日記]が登録されました。</string>
     <string name="push_content_plan">新しい[日程]が登録されました。</string>
